# ALaDOS

./: .gitignore  README.md  pyproject.toml
docs/: RMT_DSL.md  Sceduler.md  db.md  executor.md  task_manager.md
sql/: db_schema.sql  functions.sql  notifiers.sql
src/: test.py
src/python/: main.py  queue.py  types.py  uqueue.py
src/python/context/: item_loaders.py  item_loaders_registry.py  main.py
src/python/events/: event_consumers.py  event_gens.py  event_gens_registry.py  event_recievers.py  main.py  types.py
src/python/executor/: api_calls_handler.py  builtins.py  cronjobs.py  embedder.py  exceptions.py  execute_tool.py  helpers.py  main.py  queue.py  types.py
src/python/executor/builtin_tools/: context.py  general.py
src/python/executor/comms/: httpsystem.py  searxng.py
src/python/executor/cronjobs/: cronjob_registry.py  cronjobs.py  main.py  parser.py  types.py
src/python/interfaces/: alados_console.py  sql_querries.sql  webui.py
src/python/interrupts/: interrupts.py  main.py
src/python/rmt/: dsl.py  main.py  types.py
src/python/sceduler/: main.py  sql_querries.sql
src/python/utils/: aqueue.py  config_dir_resolver.py  config_handlers.py  conn_factory.py  create_rmt.py  llm_to_json.py  logger.py  name_resolver.py  occ_functions.py  search_and_replace_block_parser.py  sr_edit.py  uqueue.py
src/sql/: 001_db_schema.sql  002_functions.sql  003_notifiers.sql  004_webui_functions.sql  db_schema.sql  functions.sql  notifiers.sql
tests/: builtins_test.py  conn_factory_test.py  context_test.py  core_test.py  rmt_parser_test.py
(+5 files in other folders)
